Use a vocab filtering system to have a more manageable vocab and switch back to cosine distance

--- a/convergence/src/templates/index.html
+++ b/convergence/src/templates/index.html
@@ -20,9 +20,16 @@
     <div>
       <span><a href="/import">Import word embeddings</a></span>
     </div>
+    <div>
     {% if session['src_filename'] %}
       <span>Using {{ session['src_filename'] }}</span>
     {% endif %}
+    </div>
+    <div>
+    {% if session['num_words'] %}
+      <span>Dictionary has{{ session['num_words'] }} words</span>
+    {% endif %}
+    </div>
   </div>
 
   <div>
