--- a/convergence/src/templates/import_embeddings.html
+++ b/convergence/src/templates/import_embeddings.html
@@ -7,18 +7,32 @@
 {% block content %}
   <div>
   <form name="wordembed" method="post">
-    <label for="src_filename">Filename</label>
-    <input type="file" name="src_filename" required>
-    <br>
-    <label for="delimiter">Delimiter (default: ',')</label>
-    <input type="text" name="delimiter">
-    <br>
-    <input type="submit">
+    <div>
+      <label for="src_filename">Filename</label>
+      <input type="file" name="src_filename" required>
+    </div>
+    <div>
+      <label for="use_vocab">Use vocab filter?</label>
+      <input type="checkbox" name="use_vocab">
+    </div>
+    <div>
+      <label for="delimiter">Delimiter (default: ',')</label>
+      <input type="text" name="delimiter">
+    </div>
+    <div>
+      <input type="submit">
+    </div>
   </form>
   </div>
+
   <div>
     {% if session['src_filename'] %}
-    <span>Successfully uploaded {{ session['src_filename'] }}</span>
+        <span>Successfully uploaded {{ session['src_filename'] }}</span>
+    {% endif %}
+  </div>
+  <div>
+    {% if session['num_words'] %}
+        <span>Dictionary has {{ session['num_words'] }} words</span>
     {% endif %}
   </div>
 {% endblock %}
